# claude-code-cli-ide

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: release.yml
scripts/: install.sh  monitor.sh  setup.sh  update-languages.sh
server/: Cargo.toml
server/src/: main.rs
server/src/lsp/: handlers.rs
server/src/mcp/: handlers.rs
src/: lib.rs
