[package]
name = "cc-zed"
version = "0.1.0"
edition = "2021"
authors = ["Beregcamlost <beregcamlost@gmail.com>"]
description = "Claude Code IDE integration for Zed"
repository = "https://github.com/beregcamlost/cc-zed"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
