[package]
name = "claude-code-cli-ide"
version = "0.1.3"
edition = "2021"
authors = ["Antoniojose Figueroa <beregcamlost@gmail.com>"]
description = "Claude Code IDE integration for Zed"
repository = "https://github.com/beregcamlost/claude-code-cli-ide"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
