[package]
name = "claude-code-server"
version = "0.1.0"
edition = "2021"
authors = ["Beregcamlost <beregcamlost@gmail.com>"]
description = "Claude Code server binary for cc-zed extension"
repository = "https://github.com/beregcamlost/cc-zed"
license = "MIT"

[[bin]]
name = "claude-code-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tower-lsp = "0.20"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
rand = "0.8"
